--- a/css/viewer-style.css
+++ b/css/viewer-style.css
@@ -1,4 +1,98 @@
 
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
+#map {
+    width: 100%; height: 100px;
+    margin-top: 0px;
+}
+
+.annotation-viewer {
+    background-color: transparent;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 0px;
+}
+
+.annotation-viewer.selected {
+    background-color: #fff;
+}
+
+.annotation-viewer .header {
+    padding: 4px 8px;
+    color: #999;
+}
+
+.annotation-viewer input {
+    padding: 4px 6px;
+    padding-left: 8px;
+    border: 0px solid transparent;
+    width: 90%;
+}
+
+.annotation-viewer input:focus {
+    background-color: #eee;
+    border: 0px solid #0078A8;
+}
+
+.annotation-viewer a.leaflet-control-annotation-viewer {
+    padding: 3px 0px 0px 0px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    width: 26px; height: 20px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    background-color: #fff;
+    /* font: bold 18px 'Lucida Console', Monaco, monospace; */
+}
+
+.annotation-viewer.selected a {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+.annotation-viewer.selected a.leaflet-control-annotation-viewer {
+    padding-top: 4px;
+    color: #999;
+    background-color: #eee;
+    border-top-left-radius: 4px;
+    padding-bottom: 2px;
+}
+
+.annotation-viewer a.type-group-item {
+    display: inline-block;
+    height: 26px;
+    width: 26px;
+    line-height: 26px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
+
+.annotation-viewer a.list-group-item {
+    padding: 2px 8px;
+    cursor: pointer;
+    display: block;
+    overflow: hidden;
+    height: 26px;
+    line-height: 26px;
+    text-decoration: none;
+    color: black;
+    background-color: #fff;
+    /* font: bold 18px 'Lucida Console', Monaco, monospace; */
+}
+
+.annotation-viewer a:hover {
+    background-color: #eee;
+}
+
+/** From here on are all style definitions potentially outdated */
+
 .inspection-panel {
     position: fixed;
     top: 0px; left: 0px;
